# gco-v3.0

./: CMakeLists.txt  README.txt
include/: GCoptimization.h
src/: GCoptimization.cpp
